# CryptoKnight

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
src/: db.sqlite3
src/project/: settings.py  urls.py  views.py
src/templates/: base.html  footer.html  header.html  index.html
