[tool.poetry]
name = "cryptoknight"
version = "0.1.0"
description = ""
authors = ["prathameshkhade <pkhade2865@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
